# archmage-old

./: .gitignore  CMakeLists.txt  Gemfile  LICENSE.txt  README.md  arch.bat  arch.rb  config-sample.cmake  workspace.json
projects/archmage/: CMakeLists.txt
projects/archmage/source/: Registry.cpp  Registry.h
projects/archmage/source/archmage/: Project.h  Repository.cpp  Repository.h  main.cpp  operations.h  remote.cpp  unit_loading.cpp  unit_loading.h
projects/archmage_cli/: CMakeLists.txt
projects/archmage_cli/source/: main.cpp
projects/archmage_cli_library/: CMakeLists.txt
projects/archmage_cli_library/source/archmage_cli/input/: Command.h  Flag.h  Input.cpp  Input.h  Input_Library.cpp  Input_Library.h  commands.cpp  commands.h  process_input.cpp  process_input.h
projects/archmage_cli_library/source/archmage_cli/output/: reporting.cpp  reporting.h
projects/archmage_cpp/: CMakeLists.txt
projects/archmage_loading/: CMakeLists.txt
projects/archmage_loading/source/: pathing.cpp  pathing.h
projects/archmage_loading/source/loading/: Project_Source.h  load_file.h  project_loader.cpp  project_loader.h  workspace_loader.cpp  workspace_loader.h
projects/archmage_loading/source/loading/schema/: project.json  workspace.json
projects/archmage_reporting/: CMakeLists.txt
projects/archmage_test/: CMakeLists.txt
projects/archmage_test/resources/registry/projects/: audio.json  mythic.json
projects/archmage_test/resources/registry/projects/mythic/: 1.0.0.json
projects/archmage_test/source/: workspace_test.cpp
projects/projection/: CMakeLists.txt
projects/projection/source/: Library.cpp  Library.h  Project.cpp  Project.h  Registry.cpp  Version.cpp  Version.h  Workspace.cpp  Workspace.h  operations.h  remote.cpp  remote.h  unit_loading.h
projects/projection/source/loading/: Json_Handler.cpp  Json_Handler.h  load_file.cpp  project_loader.cpp  project_loader.h  workspace_loader.cpp
projects/projection_cpp/: CMakeLists.txt
ruby/source/: arch.rb  library.rb  registry.rb  unit.rb
ruby/source/cli/: options.rb  output.rb
ruby/test/resources/workspace/: config.json  workspace.json
ruby/test/tests/: workspace_test.rb
scripts/: install.rb
source/: arch.rb  cli.rb  remote.rb  unit.rb  unit_loader.rb  version.rb  workspace.rb
test/archmage_test/resources/registry/projects/audio/: 1.0.0.json  (+2 more)
test/archmage_test/source/: workspace_test.cpp
test/resources/: project.yaml
test/resources/registry/: audio.yaml  mythic.yaml
test/resources/registry/units/: mythic.json
test/resources/workspace/: workspace.json
test/tests/: main_test.rb  workspace_test.rb
(+2 files in other folders)
